css/masthead.css
  .masthead {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 100%;
  }

  .masthead__section {
    padding-inline-start:var(--padding-inline);
    padding-inline-end:var(--padding-inline);
    padding-block-start:var(--padding-block);
    padding-block-end:var(--padding-block);
    margin: auto;
  }

  img[alt="phones"] {
    display: none;
  }

  .masthead__section--header {
    font-size: 30px;
    color: #333333;
    text-align: center;
  }

  .masthead__section--paragraph {
    color: #4F4F4F;
    font-weight: 400;
    text-align: center;
  }

  .masthead__section--list {
    padding: 0;
    display: flex;
  }

@media (min-width: 365px) {
  .masthead__section {
    margin-block-start: calc(var(--margin-block) * 2);
    margin-block-end: calc(var(--margin-block) * 2);
  }

  .masthead {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    background-image: url("../img/bg_header.png");
    background-position-x: 100%;
    background-position-y: 85%;
    background-size: 100%;
    background-repeat: no-repeat;
    position: relative;
  }

  img[alt="phones"] {
    display: block;
}

  .masthead__image {
    position: relative;
    grid-column: 2;
    position: absolute;
    top: -35%;
}

  .masthead__section--header {
    font-size: 36px;
    color: #333333;
    text-align: start;
  }

  .masthead__section--paragraph {
    font-size: 18px;
    color: #4F4F4F;
    font-weight: 400;
    text-align: start;
  }

  .masthead__section--list {
    padding: 0;
    display: flex;
  }

  .masthead__section--list,
  .masthead__section--header
   {
    padding-block-start:var(--padding-block);
    padding-block-end:var(--padding-block);
  }
}

